# substrate-custom-rpc

./: README.md
node/: Cargo.toml
node/src/: rpc.rs
pallets/template/src/: lib.rs
pallets/template/src/rpc/: Cargo.toml
pallets/template/src/rpc/src/: lib.rs
primitives/runtime-api/: Cargo.toml
primitives/runtime-api/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
